force-app/main/default/objects/ssot__MaterialityTopicDocClauseSet__dlm/fields/ssot__rel_1731658747521_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731658747521_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MaterialityTopicDocClauseSet_Documen_rel</label>
    <referenceTo>ssot__DocumentClauseSet__dlm</referenceTo>
    <relationshipLabel>MaterialityTopicDocClauseSet_Documen_rel</relationshipLabel>
    <relationshipName>rel_1731658747521_end</relationshipName>
    <type>Lookup</type>
</CustomField>