force-app/main/default/objects/ssot__MaterialityTopicDocClauseSet__dlm/fields/ssot__rel_1731659052124_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731659052124_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MaterialityTopicDocClauseSet_Materia_rel</label>
    <referenceTo>ssot__MaterialityTopic__dlm</referenceTo>
    <relationshipLabel>MaterialityTopicDocClauseSet_Materia_rel</relationshipLabel>
    <relationshipName>rel_1731659052124_end</relationshipName>
    <type>Lookup</type>
</CustomField>